@@ -1,3 +1,12 @@
+2005-07-16  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/prettytable.c: (pretty_table_new):
+	* src/procman.c: (procman_data_new):
+	* src/proctable.c: (refresh_list), (proctable_free_table):
+
+	s/g_hash_table_new (g_direct_hash, g_direct_equal)
+	 /g_hash_table_new (NULL, NULL)/g.
+
 2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* configure.in: post release version bump.
